Home page: header text align fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,10 @@
   gap: 30px;
 }
 
+.main>h1{
+  text-align: center;
+}
+
 .cards-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
